<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextGeneration">
    <!-- Chat list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/inputLayoutTextGeneration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Message input layout -->
    <LinearLayout
        android:id="@+id/inputLayoutTextGeneration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:id="@+id/messageInputTextGeneration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/ask_textBox"
            android:inputType="text"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/sendButtonTextGeneration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_button" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>