<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#24b47c"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@android:color/white"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="32dp"
        android:clipToPadding="false"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/login_header"
            android:textColor="#43A047"
            android:textSize="24sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/login_username"
            app:startIconDrawable="@drawable/ic_user" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:layout_marginBottom="24dp"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:backgroundTint="#24b47c"
            android:textColor="@android:color/black"
            app:cornerRadius="8dp"
            android:elevation="2dp"
            tools:ignore="VisualLintButtonSize" />
        <TextView
            android:id="@+id/registerActivityOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regsiter_button"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#43A047"
            android:gravity="center"
            android:padding="2dp"
            android:shadowColor="#55000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>